--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
+    "clsx": "^1.1.1",
     "css-loader": "^4.3.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
